# spark-signals

./: .env.test  .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
crates/spark-agent/: Cargo.toml
crates/spark-agent/src/: discovery.rs  main.rs  signal_policy.rs
crates/spark-linux/: Cargo.toml
crates/spark-linux/src/: lib.rs
crates/spark-nvidia/: Cargo.toml
crates/spark-nvidia/src/: capabilities.rs  lib.rs
crates/spark-nvidia/tests/fixtures/: gb10-nvidia-smi.csv
crates/spark-otel-bridge/: Cargo.toml
crates/spark-otel-bridge/src/: main.rs  unavailable_log.rs
crates/spark-otel-bridge/src/plugins/: maple.rs  mod.rs  standard.rs
crates/spark-probes/: Cargo.toml
crates/spark-probes/src/: lib.rs
crates/spark-schema/: Cargo.toml
crates/spark-schema/src/: lib.rs
deploy/: install-system.sh  mock-llm-metrics.py  mock-otlp.py  rotate-nats-bridge-password.sh  test-llm-adapter.sh  test-nats.sh  test-otel.sh  test-reconnect.sh  validate-host.sh
deploy/example-config/: agent.toml  bridge.env
deploy/hardware-capabilities/: dgx-spark-gb10.toml
deploy/nats/: compose.yml  nats-server.conf
deploy/signal-policies/: default.toml
deploy/systemd/: spark-agent.service  spark-agent.user.service  spark-otel-bridge.service  spark-otel-bridge.user.service
docs/: hardware-capabilities.md  llm-adapters.md  maple-integration.md  metric-catalogue.md  nats-credentials.md  otel-mapping.md  otel-target-plugins.md  schema-v1.md  security-model.md  service-probes.md  signal-policies.md  user-guide.md
