[workspace]
members = [
    "crates/spark-agent",
    "crates/spark-linux",
    "crates/spark-nvidia",
    "crates/spark-otel-bridge",
    "crates/spark-probes",
    "crates/spark-schema",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/robbiemu/spark-signals"

[workspace.dependencies]
anyhow = "1"
async-nats = "0.49.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
