[package]
name = "spark-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
spark-linux = { path = "../spark-linux" }
spark-schema = { path = "../spark-schema" }
tokio.workspace = true

[lints]
workspace = true

