[package]
name = "spark-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
spark-linux = { path = "../spark-linux" }
spark-nvidia = { path = "../spark-nvidia" }
spark-probes = { path = "../spark-probes" }
spark-schema = { path = "../spark-schema" }
tokio.workspace = true
toml.workspace = true

[lints]
workspace = true
