[package]
name = "spark-nvidia"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
nvml-wrapper = "0.12.1"
serde.workspace = true
spark-schema = { path = "../spark-schema" }
toml.workspace = true

[lints]
workspace = true
