[package]
name = "spark-probes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["rustls", "charset", "http2"] }
serde.workspace = true
spark-schema = { path = "../spark-schema" }
toml.workspace = true

[lints]
workspace = true

